--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <p>Kehinde is the Technical Lead with a deep background in cybersecurity and network defense strategies.</p>
                     </div>
                     <div class="team-member">
-                        <img src="/images/3666.jpg" alt="Team Member 4" class="team-img" style="width: 120px; height: 120px; border-radius: 30%;" />
+                        <img src="images/3666.jpg" alt="Team Member 4" class="team-img" style="width: 120px; height: 120px; border-radius: 30%;" />
                         <h4>Cindy Luoung</h4>
                         <p>Cindy is a Senior Consultant specializing in data protection and privacy law compliance.</p>
                     </div>
