--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
                         <p>Kehinde is the Technical Lead with a deep background in cybersecurity and network defense strategies.</p>
                     </div>
                     <div class="team-member">
-                        <img src="images/3666.jpg" alt="Team Member 4" class="team-img" style="width: 120px; height: 120px; border-radius: 30%;" />
+                        <img src="../images/3666.jpg" alt="Team Member 4" class="team-img" style="width: 120px; height: 120px; border-radius: 30%;" />
                         <h4>Cindy Luoung</h4>
                         <p>Cindy is a Senior Consultant specializing in data protection and privacy law compliance.</p>
                     </div>
                     <div class="team-member">
-                        <img src="//images/3666.jpg" alt="Team Member 5" class="team-img" style="width: 120px; height: 120px; border-radius: 30%;" />
+                        <img src=".../images/3666.jpg" alt="Team Member 5" class="team-img" style="width: 120px; height: 120px; border-radius: 30%;" />
                         <h4>Jarrell Matos</h4>
                         <p>Jarrell handles client relations and project management, ensuring smooth communication and project delivery.</p>
                     </div>
