--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" />
     </noscript>
+    <style>
+        /* Custom styling for controlling the image sizes */
+        .chart-section img {
+            max-width: 100%;  /* Ensures the image does not exceed the width of the container */
+            width: 600px;     /* Set a custom width for the images */
+            height: auto;     /* Maintains the aspect ratio of the images */
+            display: block;   /* Ensures the images are block-level elements (not inline) */
+            margin: 20px auto;  /* Adds space before and after images and centers them */
+        }
+
+        /* Adding space between titles and images */
+        .chart-section h3 {
+            margin-bottom: 20px; /* Space after the title */
+            margin-top: 40px;    /* Space before the title */
+        }
+    </style>
 </head>
 
 <body class="is-preload">
@@ -33,6 +49,7 @@
                 <ul>
                     <li><a href="#intro">Introduction</a></li>
                     <li><a href="#work">Our Approach</a></li>
+                    <li><a href="#vanta-report">Vanta’s Report</a></li>
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -56,6 +73,40 @@
                 <!-- Image Path from images folder -->
                 <span class="image main"><img src="images/pic02.jpg" alt="Our Approach" /></span>
                 <p>At 9Brains, we implement dependable practices and frameworks that ensure your organization meets the requirements of ISO 27001. Our services include risk assessments, policy development, and employee training.</p>
+            </article>
+
+            <!-- Vanta Report -->
+            <article id="vanta-report">
+                <h2 class="major">Vanta Compliance Report</h2>
+                <p>This report presents the current compliance status of Roughnecks Construction Inc., based on ISO 27001 standards. Below is a summary of the key metrics we have monitored:</p>
+
+                <h3>Key Metrics</h3>
+                <ul>
+                    <li><strong>Risk Over Time:</strong> The number of risks has steadily decreased, with a significant reduction in high and critical risks by December.</li>
+                    <li><strong>Framework Progress:</strong> Compliance with ISO 27001 is currently at 75%, showing consistent progress towards full certification.</li>
+                    <li><strong>Test Remediation:</strong> 80% of tests were completed on time, with the remainder being addressed promptly.</li>
+                </ul>
+
+                <section class="chart-section" id="framework-progress">
+                    <h3>Framework Progress</h3>
+                    <img src="images/framework.png" alt="Framework Progress Chart">
+                </section>
+
+                <section class="chart-section" id="test-remediation">
+                    <h3>Program Test Item Completion Rate</h3>
+                    <img src="images/comp.png" alt="Test Completion Chart">
+                </section>
+
+                <section class="chart-section" id="control-assignments">
+                    <h3>Control Assignment Timeline</h3>
+                    <img src="images/control.png" alt="Control Assignment Timeline Chart">
+                </section>
+
+                <section class="chart-section" id="roi">
+                    <h3>Return on Investment (ROI)</h3>
+                    <p>By using Vanta’s automated compliance tracking, Roughnecks Construction Inc. unlocked $82,978 in additional revenue and saved $201,463 in associated compliance costs.</p>
+                    <img src="images/roi.png" alt="Return on Investment Chart">
+                </section>
             </article>
 
             <!-- About -->
@@ -136,7 +187,7 @@
 
         <!-- Footer -->
         <footer id="footer">
-            <p class="copyright">&copy; ChargeGuardians. Powered by <a href="https://9brains.us">9Brains</a>.</p>
+            <p>&copy; ChargeGuardians. Powered by <a href="https://9brains.us">9Brains</a>.</p>
         </footer>
 
     </div>
