--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
                         addressed promptly.</li>
                 </ul>
 
+                <section class="chart-section" id="risk-remediation">
+                    <h3>Program Test Item Completion Rate</h3>
+                    <img src="images/risk.png" alt="Test Completion Chart" class="chart-image">
+                </section>
+                               
                 <section class="chart-section" id="framework-progress">
                     <h3>Framework Progress</h3>
                     <img src="images/framework.png" alt="Framework Progress Chart" class="chart-image">
