--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 </ul>
 
                 <section class="chart-section" id="risk-remediation">
-                    <h3>Program Test Item Completion Rate</h3>
+                    <h3>Inherit Risk</h3>
                     <img src="images/risk.png" alt="Test Completion Chart" class="chart-image">
                 </section>
                                
