--- a/index.html
+++ b/index.html
@@ -221,6 +221,8 @@
         <li><strong>Streamlined Compliance:</strong> Automates workflows and evidence collection, improving audit readiness and reducing preparation time, with a 75% compliance rate achieved.</li>
         <li><strong>Cost and Efficiency Gains:</strong> Vanta reduces manual work and enhances security processes, providing over $200,000 in savings on compliance costs annually.</li>
     </ul>
+    <p>For more information, visit our <a href="gapanalysis.html">detailed gap analysis page</a>.</p>
+
 </article>
 
 
