--- a/index.html
+++ b/index.html
@@ -177,39 +177,33 @@
                 <th style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Area</th>
                 <th style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Current State (Gap)</th>
                 <th style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Desired State (Goal)</th>
-                <th style="border: 1px solid rgb(30, 253, 0); padding: 8px;">How <strong>INKSPOT</strong> and <strong>Vanta</strong> Bridge the Gap</th>
+                <th style="border: 1px solid rgb(30, 253, 0); padding: 8px;">INKSPOT and Vanta Solutions</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Governance</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Fragmented security oversight, lack of clear alignment between security and business goals.</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Integrated governance that aligns security with business strategies, improving oversight.</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;"><strong>INKSPOT:</strong> Embeds security into strategic planning.<br><strong>Vanta:</strong> Automates task assignment, improving governance accountability and reducing compliance costs.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Fragmented oversight, no alignment with business goals.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Integrated governance aligned with business strategy.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;"><strong>INKSPOT:</strong> Embeds security in planning.<br><strong>Vanta:</strong> Automates task assignments.</td>
             </tr>
             <tr>
                 <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Risk Management</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Slow risk response, relying on manual monitoring of threats and vulnerabilities.</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Proactive risk management with real-time threat detection and rapid responses.</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;"><strong>INKSPOT:</strong> Ensures evolving risk frameworks.<br><strong>Vanta:</strong> Continuous threat monitoring and alerting for faster risk mitigation, reducing operational risk by 20%.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Slow response, manual risk tracking.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Proactive, real-time risk management.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;"><strong>INKSPOT:</strong> Adapts to risk.<br><strong>Vanta:</strong> Real-time threat monitoring.</td>
             </tr>
             <tr>
                 <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Compliance Processes</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Manual and fragmented compliance tracking, resulting in high audit preparation time.</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Streamlined, automated compliance workflows for faster audit readiness.</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;"><strong>INKSPOT:</strong> Optimizes workflows for efficiency.<br><strong>Vanta:</strong> Centralizes and automates compliance tasks, improving audit readiness by 75% and reducing costs.</td>
-            </tr>
-            <tr>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Evidence Collection</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Time-consuming manual evidence collection with potential for human error and inefficiencies.</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Automated, real-time evidence collection to ensure audit readiness.</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;"><strong>INKSPOT:</strong> Improves efficiency with automation.<br><strong>Vanta:</strong> Automatically collects audit-ready evidence in real-time, reducing audit preparation time by 50%.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Manual, fragmented tracking.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Automated, streamlined workflows.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;"><strong>INKSPOT:</strong> Optimizes workflows.<br><strong>Vanta:</strong> Automates compliance tasks.</td>
             </tr>
             <tr>
                 <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Adaptability</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Difficulty adapting to regulatory changes and keeping processes up to date.</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Agile compliance that adapts quickly to regulatory changes without disrupting operations.</td>
-                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;"><strong>INKSPOT:</strong> Supports quick updates to processes.<br><strong>Vanta:</strong> Monitors regulatory changes and automatically updates compliance requirements, ensuring compliance.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Difficulty adapting to regulatory changes.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;">Agile, adaptive compliance.</td>
+                <td style="border: 1px solid rgb(30, 253, 0); padding: 8px;"><strong>INKSPOT:</strong> Quick process updates.<br><strong>Vanta:</strong> Auto-updates regulatory requirements.</td>
             </tr>
         </tbody>
     </table>
@@ -224,6 +218,7 @@
     <p>For more information, visit our <a href="gapanalysis.html">detailed gap analysis page</a>.</p>
 
 </article>
+
 
 
             <!-- Vanta Report -->
