--- a/gapanalysis.html
+++ b/gapanalysis.html
@@ -25,7 +25,7 @@
         }
 
         .image-section img {
-            max-width: 40%; /* Make the image smaller */
+            max-width: 68%; /* Make the image smaller */
             height: auto;
             border: 3px solid #4210cb;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.888); /* Shadow around the image */
@@ -35,7 +35,7 @@
         .right-link {
             position: absolute;
             top: 50%; /* Align vertically with the image */
-            left: 75%; /* Move the link closer to the image */
+            left: 85%; /* Move the link closer to the image */
             transform: translateY(-50%);
             color: #ffffff; /* White text for the link */
             text-decoration: none; /* No underline */
@@ -59,7 +59,7 @@
     <div class="image-section">
         <h2>Gap Analysis</h2>
         <!-- Replace 'images/gap.png' with the correct path to your image -->
-        <img src="images/gap.png" alt="Gap Analysis Image">
+        <img src="images/dante.png" alt="Gap Analysis Image">
 
         <!-- Link to another page positioned very close to the right of the image -->
         <a href="ai.html" class="right-link">Podcast</a>
