--- a/chatbot.html
+++ b/chatbot.html
@@ -51,7 +51,7 @@
 
         /* Styling for bot responses */
         .bot-message {
-            color: #1aef1a;
+            color: #1ea11e;
             font-weight: bold;
         }
 
