--- a/chatbot.html
+++ b/chatbot.html
@@ -12,9 +12,9 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 500px; /* Increased width */
-            height: 600px; /* Increased height */
-            background-color: #f1f1f1; /* Default chat box background color */
+            width: 500px;
+            height: 600px;
+            background-color: #f1f1f1;
             border-radius: 10px;
             border: 2px solid #19fb04;
             display: flex;
@@ -43,13 +43,11 @@
             margin: 5px 0;
         }
 
-        /* Styling for user messages */
         .user-message {
             color: #1E90FF;
             font-weight: bold;
         }
 
-        /* Styling for bot responses */
         .bot-message {
             color: #1ea11e;
             font-weight: bold;
@@ -81,13 +79,59 @@
             display: flex;
         }
 
+        /* Static Quiz link container */
+        #quiz-link-container {
+            position: absolute;
+            top: 50%;
+            left: calc(50% + 320px); /* Positioned to the right of the chat box */
+            transform: translateY(-50%);
+            background-color: #000;
+            padding: 20px;
+            border-radius: 10px;
+            border: 2px solid #19fb04;
+            font-family: Arial, sans-serif;
+            width: 240px;
+            text-align: center;
+        }
+
+        #quiz-link-container p {
+            color: #19fb04;
+            font-weight: bold;
+            font-size: 22px;
+        }
+
+        #quiz-link-container a {
+            text-decoration: none;
+            color: #ffffff;
+            font-weight: bold;
+            font-size: 18px;
+            display: block;
+            margin-top: 10px;
+            animation: glowing 1.5s infinite; /* Added the glowing animation */
+        }
+
+        @keyframes glowing {
+            0% {
+                text-shadow: 0 0 5px #19fb04, 0 0 10px #19fb04, 0 0 15px #19fb04, 0 0 20px #19fb04;
+                color: #ffffff; /* Glowing color */
+            }
+            50% {
+                text-shadow: 0 0 20px #19fb04, 0 0 30px #19fb04, 0 0 40px #19fb04, 0 0 50px #19fb04;
+                color: #19fb04; /* Light up */
+            }
+            100% {
+                text-shadow: 0 0 5px #19fb04, 0 0 10px #19fb04, 0 0 15px #19fb04, 0 0 20px #19fb04;
+                color: #ffffff; /* Dim again */
+            }
+        }
+
         /* Background from original page */
         body.is-preload {
-            background: #000; /* Fallback color */
+            background: #000;
         }
 
         #bg {
-            background-image: url('images/5471.jpg'); /* Update to the image path you're using */
+            background-image: url('images/5471.jpg');
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -117,13 +161,16 @@
         </div>
     </div>
 
+    <!-- Static Quiz Link Container -->
+    <div id="quiz-link-container">
+        <p>Feeling brave? <br> Take a quiz!</p>
+        <a href="quiz.html" target="_blank">Start Now</a>
+    </div>
+
     <script>
         const responses = {
-            // Fun questions
             "Hi, how is your day going?": "Oh you know, living the AI dream!",
             "What is your favorite hobby?": "Chatting with you, of course!",
-            
-            // Policy-related questions
             "What is an Information Security Policy?": "It's how you protect information assets.",
             "What is the scope of a policy?": "It defines what systems and processes it covers.",
             "Who should be the policy owner?": "The person responsible for maintaining the policy.",
@@ -142,13 +189,11 @@
             const message = messageInput.value;
 
             if (message.trim() !== "") {
-                // Create a new chat bubble for user message
                 const userMessage = document.createElement('p');
                 userMessage.textContent = `You: ${message}`;
                 userMessage.classList.add('user-message');
                 chatContent.appendChild(userMessage);
 
-                // Simulate bot response with predefined answers
                 const botMessage = document.createElement('p');
                 if (responses[message]) {
                     botMessage.textContent = `Bot: ${responses[message]}`;
@@ -158,10 +203,8 @@
                 botMessage.classList.add('bot-message');
                 chatContent.appendChild(botMessage);
 
-                // Clear the input field after sending
                 messageInput.value = '';
 
-                // Scroll to the bottom of the chat content
                 chatContent.scrollTop = chatContent.scrollHeight;
             }
         }
